Init changelog files for all modules

--- a/modules/contract/CHANGELOG
+++ b/modules/contract/CHANGELOG
@@ -1,1 +1,4 @@
 * Added Wizard to change start date of contract with propagation to related objects before activation.
+
+Version 1.2 - 2014-07-01
+* Changelog file creation
